--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@playwright/test": "^1.39.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "test:e2e": "playwright test"
   }
 }
