--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
+    "test:e2e": "playwright test",
     "lint": "next lint"
   },
   "dependencies": {
@@ -25,7 +26,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3",
-    "test:e2e": "playwright test"
+    "tailwindcss": "^3"
   }
 }
