--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "tailwindcss": "^3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint"
+    }
   }
+  
 }
