--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@playwright/test": "^1.39.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
-    "@playwright/test": "^1.39.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "husky": "^8.0.3",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "tailwindcss": "^3"
@@ -32,5 +33,4 @@
       "pre-commit": "lint"
     }
   }
-  
 }
