--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.10",
+    "@playwright/test": "^1.39.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
-    "@playwright/test": "^1.39.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
@@ -32,5 +33,4 @@
       "pre-commit": "lint"
     }
   }
-  
 }
