--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "DB_FILE=db.sqlite node lib/database/seed.js",
     "test": "jest --watch",
     "test:e2e": "playwright test",
     "lint": "next lint"
   },
   "dependencies": {
+    "better-sqlite3": "^9.0.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@playwright/test": "^1.39.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
-    "@playwright/test": "^1.39.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
