--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,9 @@ primary_region = "lhr"
 
 [build]
 
+[env]
+  DATABASE_PATH = "/data/mydb.sqlite"
+
 [mounts]
   source="art_vandelay_data"
   destination="/data"
