--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "DB_FILE=db.sqlite next dev",
     "build": "next build",
     "start": "next start",
     "seed": "DB_FILE=db.sqlite node app/_lib/database/seed.js",
