--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "tailwindcss": "^3"
