--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "better-sqlite3": "^9.0.0",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
