--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "DB_FILE=db.sqlite next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "DB_FILE=db.sqlite next build",
+    "start": "DB_FILE=db.sqlite next start",
     "seed": "DB_FILE=db.sqlite node app/_lib/database/seed.js",
     "seed fly": "DB_FILE=/data/db.sqlite node app/_lib/database/seed.js",
     "test": "jest --watch",
-    "test:e2e": "playwright test",
+    "test:e2e": "DB_FILE=db.sqlite playwright test",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "bat": "DB_FILE=db.sqlite start-server-and-test start http://localhost:3000 test:e2e"
   },
   "dependencies": {
     "better-sqlite3": "^9.0.0",
@@ -33,6 +34,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.0.3",
+    "start-server-and-test": "^2.0.1",
     "tailwindcss": "^3"
   },
   "husky": {
